# poc-crewai

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
poc_crewai/: main.py
poc_crewai_developers/: README.md
poc_crewai_developers/src/poc_crewai_developers/: crew.py  main.py
src/poc_crewai_developers/: chainlit_ui_entry.py  crew.py  crew_chainlit_listener.py  main.py
src/poc_crewai_developers/config/: agents.yaml  tasks.yaml
